[gd_scene load_steps=31 format=2]

[ext_resource path="res://Game/Game_scene_controller.gd" type="Script" id=1]
[ext_resource path="res://Game/GameOverMenu.gd" type="Script" id=2]
[ext_resource path="res://space.png" type="Texture" id=3]
[ext_resource path="res://Menu/GameOverScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/PauseMenu.gd" type="Script" id=5]
[ext_resource path="res://Menu/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sucelje/Sucelje.tscn" type="PackedScene" id=7]
[ext_resource path="res://Rooms/RoomLTR.tscn" type="PackedScene" id=8]
[ext_resource path="res://Rooms/Portal.tscn" type="PackedScene" id=9]
[ext_resource path="res://Rooms/Room LB.tscn" type="PackedScene" id=10]
[ext_resource path="res://Rooms/Room TR.tscn" type="PackedScene" id=11]
[ext_resource path="res://tilesets/tileGreen.tres" type="TileSet" id=12]
[ext_resource path="res://Rooms/Room TL.tscn" type="PackedScene" id=13]
[ext_resource path="res://tilesets/tileCyan.tres" type="TileSet" id=14]
[ext_resource path="res://Rooms/Room RB.tscn" type="PackedScene" id=15]
[ext_resource path="res://Rooms/RoomLBR.tscn" type="PackedScene" id=16]
[ext_resource path="res://tilesets/tileOrange.tres" type="TileSet" id=17]
[ext_resource path="res://Player.tscn" type="PackedScene" id=18]
[ext_resource path="res://enemy.tscn" type="PackedScene" id=19]
[ext_resource path="res://enemy2.png" type="Texture" id=20]
[ext_resource path="res://enemyeye.png" type="Texture" id=21]
[ext_resource path="res://bullet.png" type="Texture" id=22]
[ext_resource path="res://Game/test_script_for_collision.gd" type="Script" id=23]
[ext_resource path="res://Music and effects/bhit1.wav" type="AudioStream" id=24]
[ext_resource path="res://Music and effects/CFF-Absolute Uninstaller 2.2kg.ogg" type="AudioStream" id=25]
[ext_resource path="res://Fade_in/FadeIn.tscn" type="PackedScene" id=26]
[ext_resource path="res://Menu/FadeOut.gd" type="Script" id=27]
[ext_resource path="res://fullscreen toggler.tscn" type="PackedScene" id=28]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Game - Goblin boy" type="Node2D"]
script = ExtResource( 1 )

[node name="Game Over" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="GameOverMenu" type="Control" parent="Game Over"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Game Over/GameOverMenu"]
modulate = Color( 1, 1, 1, 0.654902 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -143.0
margin_right = 208.0
margin_bottom = 145.0
texture = ExtResource( 3 )
expand = true

[node name="TitleScreen" parent="Game Over/GameOverMenu" instance=ExtResource( 4 )]

[node name="CenterRow" parent="Game Over/GameOverMenu/TitleScreen/Menu" index="1"]
margin_bottom = 222.0

[node name="Buttons" parent="Game Over/GameOverMenu/TitleScreen/Menu/CenterRow" index="0"]
margin_bottom = 171.0

[node name="NewGameButton" parent="Game Over/GameOverMenu/TitleScreen/Menu/CenterRow/Buttons" index="0"]
scene_to_load = ""

[node name="MenuButton" parent="Game Over/GameOverMenu/TitleScreen/Menu/CenterRow/Buttons" index="1"]
scene_to_load = ""

[node name="PauseInterface" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 2

[node name="PauseMenu" type="Control" parent="PauseInterface"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -175.0
margin_right = 320.0
margin_bottom = 175.0
script = ExtResource( 5 )

[node name="BackOverlay" type="ColorRect" parent="PauseInterface/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="TitleScreen" parent="PauseInterface/PauseMenu" instance=ExtResource( 6 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sucelje" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="Rooms" type="Node2D" parent="."]

[node name="Room Bottom" parent="Rooms" instance=ExtResource( 8 )]
position = Vector2( -128, 32 )

[node name="TileMap2" parent="Rooms/Room Bottom" index="0"]
tile_data = PoolIntArray( 262145, 27, 0, 262157, 536870939, 0, 393216, 5, 0, 393217, 30, 0, 393229, 536870942, 0, 393230, 536870917, 0, 589829, 22, 0, 589833, 22, 0, 589835, 22, 0, 589836, 22, 0, 589837, 536870928, 0, 655361, 5, 0, 655362, 6, 0, 655363, 7, 0, 655364, 6, 0, 655365, 7, 0, 655366, 6, 0, 655368, 536870918, 0, 655369, 536870919, 0, 655370, 536870918, 0, 655371, 536870919, 0, 655372, 536870918, 0, 655373, 536870917, 0 )

[node name="TileMap" parent="Rooms/Room Bottom" index="1"]
tile_data = PoolIntArray( 7, 1610612770, 0, 65537, 8, 0, 65538, 9, 0, 65539, 18, 0, 65540, 536870921, 0, 65541, 536870921, 0, 65542, 536870943, 0, 65543, 0, 0, 65544, 31, 0, 65545, 19, 0, 65546, 18, 0, 65547, 9, 0, 65548, 18, 0, 65549, 536870920, 0, 131073, 12, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 536870912, 0, 131085, 536870922, 0, 196609, 11, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 536870912, 0, 196619, 536870912, 0, 196620, 536870912, 0, 196621, 1610612747, 0, 262145, 56, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 536870912, 0, 262154, 536870912, 0, 262155, 536870912, 0, 262156, 536870912, 0, 262157, 536870968, 0, 327680, 28, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 1610612738, 0, 327687, 1610612737, 0, 327688, 0, 0, 327689, 536870912, 0, 327690, 536870912, 0, 327691, 536870912, 0, 327692, 536870912, 0, 327693, 1610612736, 0, 327694, 536870940, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 536870912, 0, 393223, 536870912, 0, 393224, 536870912, 0, 393225, 536870912, 0, 393226, 536870912, 0, 393227, 536870912, 0, 393228, 536870912, 0, 393229, 536870970, 0, 458753, 1073741836, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 536870912, 0, 458759, 536870912, 0, 458760, 536870912, 0, 458761, 536870912, 0, 458762, 536870912, 0, 458763, 536870912, 0, 458764, 536870912, 0, 458765, 1610612747, 0, 524289, 15, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 536870912, 0, 524296, 536870912, 0, 524297, 536870912, 0, 524298, 536870912, 0, 524299, 536870912, 0, 524300, 536870912, 0, 524301, 1610612746, 0, 589825, 16, 0, 589826, 17, 0, 589827, 536870934, 0, 589828, 536870935, 0, 589829, 536870958, 0, 589830, 536870934, 0, 589831, 536870934, 0, 589832, 536870934, 0, 589833, 536870958, 0, 589834, 536870935, 0, 589835, 536870958, 0, 589836, 536870958, 0, 589837, 536870957, 0, 655367, 536870918, 0 )

[node name="Portal_L" parent="Rooms/Room Bottom" instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 16, 160 )
location = NodePath("../../../Coordinates/Bottom Left Room/Right")

[node name="Portal_U" parent="Rooms/Room Bottom" instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 240, 3 )
location = NodePath("../../../Coordinates/Top Room/Down")

[node name="Portal_R" parent="Rooms/Room Bottom" instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 464, 160 )
location = NodePath("../../../Coordinates/Bottom Right Room/Left")

[node name="Room Top Right" parent="Rooms" instance=ExtResource( 10 )]
position = Vector2( 1056, -736 )

[node name="Portal_L" parent="Rooms/Room Top Right" instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 18, 160 )
location = NodePath("../../../Coordinates/Top Room/Right")

[node name="Portal_D" parent="Rooms/Room Top Right" instance=ExtResource( 9 )]
position = Vector2( 240, 320 )
z_index = 3
location = NodePath("../../../Coordinates/Bottom Right Room/Up")

[node name="Room Bottom Left" parent="Rooms" instance=ExtResource( 11 )]
editor/display_folded = true
position = Vector2( -1312, 32 )

[node name="TileMap2" parent="Rooms/Room Bottom Left" index="0"]
tile_set = ExtResource( 12 )

[node name="TileMap" parent="Rooms/Room Bottom Left" index="1"]
tile_set = ExtResource( 12 )
tile_data = PoolIntArray( 7, 1073741858, 0, 65537, 8, 0, 65538, 9, 0, 65539, 18, 0, 65540, 536870921, 0, 65541, 536870921, 0, 65542, 536870943, 0, 65543, 1073741824, 0, 65544, 31, 0, 65545, 19, 0, 65546, 18, 0, 65547, 9, 0, 65548, 18, 0, 65549, 536870920, 0, 131073, 12, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 536870912, 0, 131085, 536870922, 0, 196609, 11, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 536870912, 0, 196619, 536870912, 0, 196620, 536870912, 0, 196621, 1610612747, 0, 262145, 11, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 536870912, 0, 262154, 536870912, 0, 262155, 536870912, 0, 262156, 536870912, 0, 262157, 536870941, 0, 327681, 11, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 536870912, 0, 327690, 536870912, 0, 327691, 536870912, 0, 327692, 536870912, 0, 327693, 1073741824, 0, 327694, 536870940, 0, 393217, 11, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 536870912, 0, 393223, 536870912, 0, 393224, 536870912, 0, 393225, 536870912, 0, 393226, 536870912, 0, 393227, 536870912, 0, 393228, 536870912, 0, 393229, 536870942, 0, 458753, 1073741836, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 536870912, 0, 458759, 536870912, 0, 458760, 536870912, 0, 458761, 536870912, 0, 458762, 536870912, 0, 458763, 536870912, 0, 458764, 536870912, 0, 458765, 1610612747, 0, 524289, 15, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 536870912, 0, 524296, 536870912, 0, 524297, 536870912, 0, 524298, 536870912, 0, 524299, 536870912, 0, 524300, 536870912, 0, 524301, 1610612746, 0, 589825, 16, 0, 589826, 17, 0, 589827, 536870934, 0, 589828, 536870935, 0, 589829, 536870929, 0, 589830, 17, 0, 589831, 17, 0, 589832, 17, 0, 589833, 536870929, 0, 589834, 536870935, 0, 589835, 536870929, 0, 589836, 536870929, 0, 589837, 536870928, 0, 655367, 7, 0 )

[node name="Portal_U" parent="Rooms/Room Bottom Left" instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 240, 0 )
location = NodePath("../../../Coordinates/Top Left/Down")

[node name="Portal_R" parent="Rooms/Room Bottom Left" instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 464, 162.067 )
location = NodePath("../../../Coordinates/Bottom Room/Left")

[node name="Room Bottom Right" parent="Rooms" instance=ExtResource( 13 )]
position = Vector2( 1056, 32 )

[node name="TileMap2" parent="Rooms/Room Bottom Right" index="0"]
tile_set = ExtResource( 14 )

[node name="TileMap" parent="Rooms/Room Bottom Right" index="1"]
tile_set = ExtResource( 14 )
tile_data = PoolIntArray( 7, 1610612770, 0, 65537, 8, 0, 65538, 9, 0, 65539, 18, 0, 65540, 536870921, 0, 65541, 536870921, 0, 65542, 536870943, 0, 65543, 1073741824, 0, 65544, 31, 0, 65545, 19, 0, 65546, 18, 0, 65547, 9, 0, 65548, 18, 0, 65549, 536870920, 0, 131073, 12, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 536870912, 0, 131085, 536870922, 0, 196609, 11, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 536870912, 0, 196619, 536870912, 0, 196620, 536870912, 0, 196621, 1610612747, 0, 262145, 1073741854, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 536870912, 0, 262154, 536870912, 0, 262155, 536870912, 0, 262156, 536870912, 0, 262157, 536870924, 0, 327680, 28, 0, 327681, 1073741824, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 536870912, 0, 327690, 536870912, 0, 327691, 536870912, 0, 327692, 536870912, 0, 327693, 536870923, 0, 393217, 1073741853, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 536870912, 0, 393223, 536870912, 0, 393224, 536870912, 0, 393225, 536870912, 0, 393226, 536870912, 0, 393227, 536870912, 0, 393228, 536870912, 0, 393229, 536870924, 0, 458753, 1073741836, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 536870912, 0, 458759, 536870912, 0, 458760, 536870912, 0, 458761, 536870912, 0, 458762, 536870912, 0, 458763, 536870912, 0, 458764, 536870912, 0, 458765, 1610612747, 0, 524289, 15, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 536870912, 0, 524296, 536870912, 0, 524297, 536870912, 0, 524298, 536870912, 0, 524299, 536870912, 0, 524300, 536870912, 0, 524301, 1610612746, 0, 589825, 16, 0, 589826, 17, 0, 589827, 536870934, 0, 589828, 536870935, 0, 589829, 23, 0, 589830, 17, 0, 589831, 17, 0, 589832, 17, 0, 589833, 23, 0, 589834, 536870935, 0, 589835, 23, 0, 589836, 23, 0, 589837, 536870928, 0, 655367, 6, 0 )

[node name="Portal_L" parent="Rooms/Room Bottom Right" instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 18, 160 )
location = NodePath("../../../Coordinates/Bottom Room/Right")

[node name="Portal_U" parent="Rooms/Room Bottom Right" instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 240, 3 )
location = NodePath("../../../Coordinates/Top Right/Down")

[node name="Room Top Left" parent="Rooms" instance=ExtResource( 15 )]
position = Vector2( -1312, -736 )

[node name="Portal_D" parent="Rooms/Room Top Left" instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 240, 320 )
z_index = 3
location = NodePath("../../../Coordinates/Bottom Left Room/Up")

[node name="Portal_R" parent="Rooms/Room Top Left" instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 464, 160 )
location = NodePath("../../../Coordinates/Top Room/Left")

[node name="Room Top" parent="Rooms" instance=ExtResource( 16 )]
position = Vector2( -128, -736 )

[node name="TileMap2" parent="Rooms/Room Top" index="0"]
tile_set = ExtResource( 17 )

[node name="TileMap" parent="Rooms/Room Top" index="1"]
tile_set = ExtResource( 17 )
tile_data = PoolIntArray( -327675, 8, 0, -327674, 18, 0, -327673, 19, 0, -327672, 18, 0, -327671, 19, 0, -327670, 18, 0, -327669, 536870920, 0, -262139, 11, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -262133, 536870923, 0, -196603, 12, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 1610612746, 0, -131067, 11, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 1610612747, 0, -65531, 12, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 1610612746, 0, 5, 15, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 1610612747, 0, 65537, 8, 0, 65538, 9, 0, 65539, 18, 0, 65540, 536870921, 0, 65541, 536870912, 0, 65542, 536870912, 0, 65543, 536870912, 0, 65544, 536870912, 0, 65545, 536870912, 0, 65546, 0, 0, 65547, 0, 0, 65548, 19, 0, 65549, 536870920, 0, 131073, 12, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 536870912, 0, 131085, 536870922, 0, 196609, 11, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 536870912, 0, 196619, 536870912, 0, 196620, 536870912, 0, 196621, 1610612747, 0, 262145, 29, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 536870914, 0, 262151, 0, 0, 262152, 0, 0, 262153, 536870912, 0, 262154, 536870912, 0, 262155, 536870912, 0, 262156, 536870912, 0, 262157, 536870938, 0, 327680, 28, 0, 327681, 536870912, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 536870912, 0, 327686, 536870916, 0, 327687, 536870915, 0, 327688, 0, 0, 327689, 536870912, 0, 327690, 536870912, 0, 327691, 536870912, 0, 327692, 536870912, 0, 327693, 536870912, 0, 327694, 536870940, 0, 393217, 30, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 536870912, 0, 393223, 536870916, 0, 393224, 536870913, 0, 393225, 536870912, 0, 393226, 536870912, 0, 393227, 536870912, 0, 393228, 536870912, 0, 393229, 536870942, 0, 458753, 1073741836, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 536870912, 0, 458759, 536870912, 0, 458760, 536870912, 0, 458761, 536870912, 0, 458762, 536870912, 0, 458763, 536870912, 0, 458764, 536870912, 0, 458765, 1610612747, 0, 524289, 15, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 536870912, 0, 524296, 536870912, 0, 524297, 536870912, 0, 524298, 536870912, 0, 524299, 536870912, 0, 524300, 536870912, 0, 524301, 1610612746, 0, 589825, 16, 0, 589826, 17, 0, 589827, 536870934, 0, 589828, 536870935, 0, 589829, 536870929, 0, 589830, 32, 0, 589832, 536870944, 0, 589833, 536870929, 0, 589834, 536870929, 0, 589835, 536870929, 0, 589836, 536870929, 0, 589837, 536870928, 0, 655367, 536870945, 0 )

[node name="Portal_L" parent="Rooms/Room Top" instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 18, 160 )
location = NodePath("../../../Coordinates/Top Left/Right")

[node name="Portal_D" parent="Rooms/Room Top" instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 240, 320 )
z_index = 3
location = NodePath("../../../Coordinates/Bottom Room/Up")

[node name="Portal_R" parent="Rooms/Room Top" instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 464, 160 )
location = NodePath("../../../Coordinates/Top Right/Left")

[node name="Player" parent="." instance=ExtResource( 18 )]
editor/display_folded = true
position = Vector2( 144, 176.067 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource( 19 )]
position = Vector2( -40, 111 )

[node name="Enemy6" parent="Enemies" instance=ExtResource( 19 )]
position = Vector2( 1456, 128 )

[node name="Enemy2" parent="Enemies" instance=ExtResource( 19 )]
editor/display_folded = true
position = Vector2( -56, 288 )

[node name="Sprite" parent="Enemies/Enemy2/KinematicBody2D" index="0"]
texture = ExtResource( 20 )

[node name="Enemy4" parent="Enemies" instance=ExtResource( 19 )]
editor/display_folded = true
position = Vector2( 128, -768 )

[node name="Enemy3" parent="Enemies" instance=ExtResource( 19 )]
editor/display_folded = true
position = Vector2( 1448, 288 )

[node name="Sprite" parent="Enemies/Enemy3/KinematicBody2D" index="0"]
texture = ExtResource( 21 )

[node name="Enemy5" parent="Enemies" instance=ExtResource( 19 )]
editor/display_folded = true
position = Vector2( 1400, -632 )

[node name="TestNode" type="Node" parent="."]
editor/display_folded = true

[node name="Sprite" type="Sprite" parent="TestNode"]
visible = false
position = Vector2( -184, 0 )
z_index = 6
texture = ExtResource( 22 )
script = ExtResource( 23 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="TestNode/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestNode/Sprite/Area2D"]
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="TestNode/Sprite"]
stream = ExtResource( 24 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 25 )
volume_db = -25.0
autoplay = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="FadeIn" parent="CanvasLayer2" instance=ExtResource( 26 )]
visible = false

[node name="FadeCanvas" type="CanvasLayer" parent="."]

[node name="FadeOut" type="ColorRect" parent="FadeCanvas"]
pause_mode = 2
visible = false
margin_left = -96.0
margin_top = -32.0
margin_right = 608.0
margin_bottom = 384.0
color = Color( 0, 0, 0, 0.5 )
script = ExtResource( 27 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeCanvas/FadeOut"]
anims/Fade_out = SubResource( 2 )

[node name="fullscreen toggler" parent="." instance=ExtResource( 28 )]

[node name="Coordinates" type="Node2D" parent="."]
position = Vector2( -472, -1144 )

[node name="Bottom Room" type="Node2D" parent="Coordinates"]
position = Vector2( 1080, -56 )

[node name="Right" type="Node2D" parent="Coordinates/Bottom Room"]
position = Vector2( -296, 1394.07 )

[node name="Left" type="Node2D" parent="Coordinates/Bottom Room"]
position = Vector2( -696, 1392 )

[node name="Up" type="Node2D" parent="Coordinates/Bottom Room"]
position = Vector2( -496, 1256 )

[node name="Top Room" type="Node2D" parent="Coordinates"]
position = Vector2( 1080, -568 )

[node name="Right" type="Node2D" parent="Coordinates/Top Room"]
position = Vector2( -296, 1136 )

[node name="Left" type="Node2D" parent="Coordinates/Top Room"]
position = Vector2( -696, 1136 )

[node name="Down" type="Node2D" parent="Coordinates/Top Room"]
position = Vector2( -496, 1264 )

[node name="Bottom Left Room" type="Node2D" parent="Coordinates"]
position = Vector2( 608, -24 )

[node name="Right" type="Node2D" parent="Coordinates/Bottom Left Room"]
position = Vector2( -1008, 1360 )

[node name="Up" type="Node2D" parent="Coordinates/Bottom Left Room"]
position = Vector2( -1208, 1224 )

[node name="Top Left" type="Node2D" parent="Coordinates"]
position = Vector2( 552, -544 )

[node name="Right" type="Node2D" parent="Coordinates/Top Left"]
position = Vector2( -952, 1112 )

[node name="Down" type="Node2D" parent="Coordinates/Top Left"]
position = Vector2( -1152, 1240 )

[node name="Bottom Right Room" type="Node2D" parent="Coordinates"]
position = Vector2( 1568, -72 )

[node name="Left" type="Node2D" parent="Coordinates/Bottom Right Room"]
position = Vector2( 0, 1408 )

[node name="Up" type="Node2D" parent="Coordinates/Bottom Right Room"]
position = Vector2( 200, 1272 )

[node name="Top Right" type="Node2D" parent="Coordinates"]
position = Vector2( 1584, -560 )

[node name="Left" type="Node2D" parent="Coordinates/Top Right"]
position = Vector2( -16, 1128 )

[node name="Down" type="Node2D" parent="Coordinates/Top Right"]
position = Vector2( 184, 1256 )

[connection signal="no_enemies_left" from="." to="." method="_on_Game__Goblin_boy_no_enemies_left"]
[connection signal="maxHealth" from="Player/KinematicBody2D/Sprite/AnimationPlayer/HP" to="CanvasLayer/Sucelje" method="_on_HP_maxHealth"]
[connection signal="noHealth" from="Player/KinematicBody2D/Sprite/AnimationPlayer/HP" to="." method="_on_HP_noHealth"]
[connection signal="noHealth" from="Player/KinematicBody2D/Sprite/AnimationPlayer/HP" to="Game Over/GameOverMenu" method="_on_HP_noHealth"]
[connection signal="noHealth" from="Player/KinematicBody2D/Sprite/AnimationPlayer/HP" to="PauseInterface/PauseMenu" method="_on_HP_noHealth"]
[connection signal="tookDamage" from="Player/KinematicBody2D/Sprite/AnimationPlayer/HP" to="CanvasLayer/Sucelje" method="_on_HP_tookDamage"]
[connection signal="finished" from="Player/KinematicBody2D/Death" to="." method="_on_Death_finished"]
[connection signal="area_entered" from="TestNode/Sprite/Area2D" to="TestNode/Sprite" method="_on_Area2D_area_entered"]
[connection signal="area_shape_entered" from="TestNode/Sprite/Area2D" to="TestNode/Sprite" method="_on_Area2D_area_shape_entered"]
[connection signal="fade_finished" from="CanvasLayer2/FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="fadeOut_finished" from="FadeCanvas/FadeOut" to="." method="_on_FadeOut_fadeOut_finished"]
[connection signal="animation_finished" from="FadeCanvas/FadeOut/AnimationPlayer" to="FadeCanvas/FadeOut" method="_on_AnimationPlayer_animation_finished"]

[editable path="Game Over/GameOverMenu/TitleScreen"]

[editable path="PauseInterface/PauseMenu/TitleScreen"]

[editable path="CanvasLayer/Sucelje"]

[editable path="Rooms/Room Bottom"]

[editable path="Rooms/Room Bottom Left"]

[editable path="Rooms/Room Bottom Right"]

[editable path="Rooms/Room Top"]

[editable path="Player"]

[editable path="Enemies/Enemy2"]

[editable path="Enemies/Enemy3"]
